[workspace]
resolver = "2"

members = [
  "cubing",
  "cubing_core",
  "cubing_macros",
]
default-members = [
  "cubing"
]

[workspace.package]
version = "0.13.0"
license = "MPL-2.0"
edition = "2021"

[workspace.metadata.bin]
cargo-binstall = { version = "1.4.4" }
cargo-nextest = { version = "0.9.66" }
