[workspace]
resolver = "2"

members = [
  "cubing",
  "cubing_core",
  "cubing_macros",
  "alg_cli",
  "script/cargo-run-bin",
]
default-members = ["cubing"]

[workspace.package]
version = "0.15.2-pre1"
license = "MPL-2.0"
edition = "2021"

[workspace.dependencies]
cubing = { path = "./cubing" }
cubing_macros = { path = "./cubing_macros" }
cubing_core = { path = "./cubing_core" }

[workspace.metadata.bin]
cargo-binstall = { version = "1.4.4" }
cargo-nextest = { version = "0.9.66" }
cargo-workspaces = { version = "0.3.6" }
