[workspace]
resolver = "2"

members = [
  "cubing",
  "cubing_core",
  "cubing_macros",
  "alg_cli",
  "script/cargo-run-bin",
]
default-members = ["cubing"]

[workspace.package]
version = "0.15.3-dev"
license = "MPL-2.0"
edition = "2021"

[workspace.dependencies]
cubing = { version = "0.15.3-dev", path = "./cubing" }
cubing_macros = { version = "0.15.3-dev", path = "./cubing_macros" }
cubing_core = { version = "0.15.3-dev", path = "./cubing_core" }

[workspace.metadata.bin]
cargo-binstall = { version = "1.4.4" }
cargo-nextest = { version = "0.9.66" }
cargo-workspaces = { version = "0.3.6" }
