[package]
name = "alg-cli"
version.workspace = true
license.workspace = true
edition.workspace = true
authors = ["Lucas Garron <code@garron.net"]
description = "Alg tool."
homepage = "https://github.com/cubing/cubing.rs"
repository = "https://github.com/cubing/cubing.rs"
documentation = "https://github.com/cubing/cubing.rs"
keywords = ["cubing", "puzzle", "rubik", "solving", "WCA"]
readme = "../README.md"

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
clap_complete = "4.3.2"
cubing_core = { version = "=0.13.7", path = "../cubing_core" }
cubing_macros = { version = "=0.13.7", path = "../cubing_macros" }

[[bin]]
name = "alg"
path = "./main.rs"
