[package]
name = "alg-cli"
version.workspace = true
license.workspace = true
edition.workspace = true
authors = ["Lucas Garron <code@garron.net"]
description = "Alg tool."
homepage = "https://github.com/cubing/cubing.rs"
repository = "https://github.com/cubing/cubing.rs"
documentation = "https://github.com/cubing/cubing.rs"
keywords = ["cubing", "puzzle", "rubik", "solving", "WCA"]
readme = "../README.md"

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
clap_complete = "4.5.42"
cubing = { version = "=0.14.6-pre.1", path = "../cubing" }

[[bin]]
name = "alg"
path = "./main.rs"
