[package]
name = "cubing"
version.workspace = true
license.workspace = true
edition.workspace = true
authors = ["Lucas Garron <code@garron.net"]
description = "Features from `cubing.js` in Rust."
homepage = "https://github.com/cubing/cubing.rs"
repository = "https://github.com/cubing/cubing.rs"
documentation = "https://github.com/cubing/cubing.rs"
keywords = ["cubing", "puzzle", "rubik", "solving", "WCA"]
readme = "../README.md"

[features]
default = []
# Uses `portable_simd`, an unstable nightly feature: https://github.com/rust-lang/rust/issues/86656
simd = ["cubing_core/simd"]

[dependencies]
cubing_core = { version = "=0.14.6-pre.1", path = "../cubing_core" }
cubing_macros = { version = "=0.14.6-pre.1", path = "../cubing_macros" }

[dev-dependencies]
clap = { version = "4.5.26", features = ["derive"] }
once_cell = "1.20.2"
rand = "0.8.5"
url = "2.5.4"

[[example]]
name = "f2lfast"
