[package]
name = "cubing_core"
version.workspace = true
license.workspace = true
edition.workspace = true
authors = ["Lucas Garron <code@garron.net"]
description = "Features from `cubing.js` in Rust."
homepage = "https://github.com/cubing/cubing.rs"
repository = "https://github.com/cubing/cubing.rs"
documentation = "https://github.com/cubing/cubing.rs"
keywords = ["cubing", "puzzle", "rubik", "solving", "WCA"]
readme = "README.md"

[dependencies]
cityhasher = "0.1.0"
derive_more = "0.99.17"
more-asserts = "0.3.1"
nom = "7.1.3"
paste = "1.0.14"
serde = { version = "1.0.154", features = ["derive", "rc"] }
serde_json = "1.0.94"

[dev-dependencies]
clap = { version = "4.1.8", features = ["derive"] }
once_cell = "1.18.0"
rand = "0.8.5"
url = "2.3.1"
