[package]
name = "cubing_core"
version.workspace = true
license.workspace = true
edition.workspace = true
authors = ["Lucas Garron <code@garron.net"]
description = "Features from `cubing.js` in Rust."
homepage = "https://github.com/cubing/cubing.rs"
repository = "https://github.com/cubing/cubing.rs"
documentation = "https://github.com/cubing/cubing.rs"
keywords = ["cubing", "puzzle", "rubik", "solving", "WCA"]
readme = "README.md"

[dependencies]
derive_more = "0.99.18"
more-asserts = "0.3.1"
nom = "7.1.3"
paste = "1.0.15"
serde = { version = "1.0.217", features = ["derive", "rc"] }
serde_json = "1.0.135"
url = "2.5.4"

[dev-dependencies]
clap = { version = "4.5.26", features = ["derive"] }
once_cell = "1.20.2"
rand = "0.8.5"
url = "2.5.4"
