[package]
name = "cubing_macros"
version.workspace = true
license.workspace = true
edition.workspace = true
authors = ["Lucas Garron <code@garron.net"]
description = "Features from `cubing.js` in Rust."
homepage = "https://github.com/cubing/cubing.rs"
repository = "https://github.com/cubing/cubing.rs"
documentation = "https://github.com/cubing/cubing.rs"
keywords = ["cubing", "puzzle", "rubik", "solving", "WCA"]
readme = "README.md"

[dependencies]
cubing_core = { version = "=0.12.2", path = "../cubing_core" }
litrs = "0.4.1"
quote = "1.0.33"

[lib]
proc-macro = true
