[package]
name = "cubing_macros"
version.workspace = true
license.workspace = true
edition.workspace = true
authors = ["Lucas Garron <code@garron.net"]
description = "Features from `cubing.js` in Rust."
homepage = "https://github.com/cubing/cubing.rs"
repository = "https://github.com/cubing/cubing.rs"
documentation = "https://github.com/cubing/cubing.rs"
keywords = ["cubing", "puzzle", "rubik", "solving", "WCA"]
readme = "README.md"

[dependencies]
cubing_core = { version = "=0.14.0", path = "../cubing_core" }
quote = "1.0.38"
syn = "2.0.96"

[lib]
proc-macro = true
